creation of alert and result cards

--- a/index.html
+++ b/index.html
@@ -42,9 +42,20 @@
                 </button>
             </div>
 
-
         </form>
     </main>
+
+
+    <!-- section card IMC -->
+     <section class="container-result active-alert">
+        <div class="card-result">
+            <h3>Seu IMC é de 28</h3>
+
+            <button class="button-close">
+                <img src="./assets/close.png" alt="">
+            </button>
+        </div>
+     </section>
    
 </body>
 </html>
