update css and index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <div class="alert active-alert">
+    <div class="alert open">
         <p>Digite somente números</p>
     </div>
 
@@ -47,7 +47,7 @@
 
 
     <!-- section card IMC -->
-     <section class="container-result active-alert">
+     <section class="container-result open">
         <div class="card-result">
             <h3>Seu IMC é de 28</h3>
 
