--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./css/styles.css">
 
-    <script src="./js/script.js" defer></script>
+    <script src="./js/script.js" type="module" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,12 +27,12 @@
 
             <div class="input-wrapper">
                 <label for="peso">Peso (KG)</label>
-                <input type="text" id="peso">
+                <input type="text" id="weight" placeholder="50">
             </div>
 
             <div class="input-wrapper">
-                <label for="altura">Altura (m)</label>
-                <input type="text" id="altura">
+                <label for="altura">Altura (cm)</label>
+                <input type="text" id="height" placeholder="165">
             </div>
 
             <div class="input-wrapper">
